--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "stylelint-high-performance-animation": "^1.8.0",
     "stylelint-no-unsupported-browser-features": "^5.0.4",
     "stylelint-prettier": "^2.0.0",
-    "typescript": "^4.9.5",
     "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
@@ -96,5 +95,9 @@
     "defaults ",
     "not IE 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
+  }
 }
