--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -19,10 +19,6 @@ plugins:
   - '@typescript-eslint'
   - prettier
 rules: {
-  'prettier/prettier': ['error', { singleQuote: false }],
-  # quotes: ['error', 'double'],
-  'react/react-in-jsx-scope': 'off',
-  'no-empty': 'off',
-  'no-empty-pattern': 'off',
-  '@typescript-eslint/ban-types': 'off',
+  quotes: ['error', 'double'],
+  'react/react-in-jsx-scope': 'off'
   }
