--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "husky": "^8.0.3",
+    "next": "^13.1.6",
     "pwa-asset-generator": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
