--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,15 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
-    "src"
-, "pages", "common"  ]
+    "src",
+    "pages",
+    "common"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
