--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,25 +6,25 @@
   "display": "standalone",
   "iarc_rating_id": "",
   "icons": [{
-    "src": "/parking-48x48.png",
+    "src": "/48.png",
     "sizes": "48x48",
     "purpose": "any maskable",
     "type": "image/png"
   },
   {
-    "src": "/parking-144x144.png",
+    "src": "/144.png",
     "sizes": "144x144",
     "purpose": "any",
     "type": "image/png"
   },
   {
-    "src": "/parking-180x180.png",
+    "src": "/180.png",
     "sizes": "180x180",
     "purpose": "any",
     "type": "image/png"
   },
   {
-    "src": "/parking-512x512.png",
+    "src": "/512.png",
     "sizes": "512x512",
     "purpose": "any",
     "type": "image/png"
