--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@types/google.maps": "^3.52.4",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
