--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@christopherpickering/react-leaflet-markercluster": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,9 +12,11 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "@types/react-leaflet-markercluster": "^3.0.1",
     "axios": "^0.27.2",
     "husky": "^8.0.3",
-    "leaflet": "^1.9.3",
+    "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "next": "^13.1.6",
     "pwa-asset-generator": "^6.2.1",
     "react": "^18.2.0",
