--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@christopherpickering/react-leaflet-markercluster": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/leaflet": "^1.9.3",
@@ -15,6 +14,7 @@
     "@types/react-leaflet-markercluster": "^3.0.1",
     "axios": "^0.27.2",
     "husky": "^8.0.3",
+    "jest-environment-jsdom": "^29.7.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "next": "^13.1.6",
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -30,7 +31,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "eslintConfig": {},
   "browserslist": [
@@ -41,6 +43,7 @@
   ],
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/react": "^14.0.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -54,6 +57,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.7",
